--- a/examples/strava-fun.ipynb
+++ b/examples/strava-fun.ipynb
@@ -97,7 +97,7 @@
     "# Retrieve your strava  access token\n",
     "#token = strava_oauth2(client_id=<the-actual-id>, client_secret=<the-actual-secret> )\n",
     "#assert access_token is not None\n",
-    "access_token = strava_oauth2(client_id=\"39618\", client_secret=\"f729e79752aa9b042dc2ebc7e6242ea39e617d89\" )\n",
+    "access_token = strava_oauth2(client_id=\"<the-actual-id>\", client_secret=\"<the-actual-secret>\" )\n",
     "assert access_token is not None"
    ]
   },
